--- a/src/pages/nosotros/nosotros.css
+++ b/src/pages/nosotros/nosotros.css
@@ -1,13 +1,27 @@
-.main-nosotros{
-    padding: 20px;
+.main-nosotros {
+    padding: 10px;
 
-    h1, h2{
+    h1,
+    h2 {
         text-align: center;
     }
 }
 
-.nosotros-img{
-    img{
+.container-titulo {
+    border-radius: 10px;
+    background: rgb(122, 233, 255);
+    background-image: linear-gradient(50deg, #02c9ff 0, #20b1fe 50%, #299add 100%);
+    color: white;
+    margin-bottom: 10px;
+    padding: 10px;
+
+    h1{
+        margin-top: 5px;
+    }
+}
+
+.nosotros-img {
+    img {
         width: 100%;
     }
 }
