--- a/src/pages/categoria/categoria.css
+++ b/src/pages/categoria/categoria.css
@@ -20,7 +20,7 @@
     }
 }
 .card-img{
-    width: auto;
+    object-fit: cover;
     img{
         width: 100%;
     }
@@ -30,23 +30,28 @@
     letter-spacing: 1px;
     padding: 10px;
     p{
+        font-size: 0.9rem;
         margin: 0;
     }
 }
 .container-direcciones{
     display: flex;
     flex-direction: column;
-    gap: 10px;
 }
 
 .direccion{
     display: flex;
-    justify-content: left;
-    align-items: center;
-    gap: 5px;
     a{
         &:hover{
             color: #00a1e4ff;
         }
     }
+    p{
+        margin-top: 15px;
+    }
+}
+.icoUbi{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
