--- a/src/pages/nosotros/nosotros.css
+++ b/src/pages/nosotros/nosotros.css
@@ -15,7 +15,7 @@
     margin-bottom: 10px;
     padding: 10px;
 
-    h1{
+    h1, h2{
         margin-top: 5px;
     }
 }
@@ -23,5 +23,6 @@
 .nosotros-img {
     img {
         width: 100%;
+        border-radius: 5px;
     }
 }
