--- a/src/Components/Carrusel/carrusel.css
+++ b/src/Components/Carrusel/carrusel.css
@@ -1,4 +1,3 @@
-
 .section-ultimos-partidos{
     text-align: center;
 }
@@ -42,6 +41,9 @@
     }
 }
 
+.team{
+    margin: 0px 15px;
+}
 .teamNombre{
     font-size: 1rem;
 }
