--- a/src/Components/TablaTorneo/tablatorneo.css
+++ b/src/Components/TablaTorneo/tablatorneo.css
@@ -8,6 +8,7 @@
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
     text-align: center;
 }
