--- a/src/pages/categoria/categoria.css
+++ b/src/pages/categoria/categoria.css
@@ -1,10 +1,29 @@
 .main-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: left;
     padding: 20px;
     gap: 20px;
+    h1{
+        text-align: center;
+    }
+}
+
+.section-categorias{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.section-direcciones{
+    text-align: left;
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    h2{
+        text-align: center;
+    }
 }
 .card-container{
     width: auto;
@@ -54,4 +73,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+@media only screen and (min-width: 567px){
+    .container-direcciones{
+        flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
 }
