--- a/src/pages/inicio/home.css
+++ b/src/pages/inicio/home.css
@@ -1,4 +1,29 @@
 .main-home{
     text-align: center;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+@media only screen and (min-width: 767px){
+    .section-carruseles{
+        display: flex;
+        justify-content: space-around;
+        padding: 20px;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .main-home{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+@media only screen and (min-width: 1281px) {
+    .main-home{
+        width: 50%;
+        margin: auto;
+    }
 }
