--- a/src/pages/nosotros/nosotros.css
+++ b/src/pages/nosotros/nosotros.css
@@ -1,5 +1,6 @@
 .main-nosotros {
     padding: 10px;
+    margin: auto;
 
     h1,
     h2 {
@@ -24,5 +25,20 @@
     img {
         width: 100%;
         border-radius: 5px;
+    }
+}
+
+@media only screen and (min-width: 767px){
+    .main-nosotros{
+        width: 70%;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media only screen and (min-width: 1281px) {
+    .main-nosotros{
+        width: 50%;
+        margin: auto;
     }
 }
