correccion maquetado home

--- a/src/pages/inicio/home.css
+++ b/src/pages/inicio/home.css
@@ -22,8 +22,8 @@
 }
 
 @media only screen and (min-width: 1281px) {
-    .main-home{
-        width: 50%;
+    .section-carruseles{
+        width: 80%;
         margin: auto;
     }
 }
