--- a/src/Components/TablaTorneo/tablatorneo.css
+++ b/src/Components/TablaTorneo/tablatorneo.css
@@ -20,7 +20,23 @@
     align-items: center;
 }
 
+.card-encabezado{
+    width: 100%;
+    height: 50px;
+    background-color: #00a1e4ff;
+    display: flex;
+    justify-content: right;
+    font-size: auto;
+    border-radius: 5px;
+    color: white;
+    padding: 5px;
+    p{
+        margin: auto;
+    }
+}
+
 .card-posicion{
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
