--- a/src/pages/inicio/home.css
+++ b/src/pages/inicio/home.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 20px;
 }
 
 @media only screen and (min-width: 767px){
@@ -22,6 +23,9 @@
 }
 
 @media only screen and (min-width: 1281px) {
+    .main-home{
+        width: 50%;
+    }
     .section-carruseles{
         width: 80%;
         margin: auto;
