--- a/src/pages/torneos/torneo.css
+++ b/src/pages/torneos/torneo.css
@@ -21,3 +21,17 @@
     border: 2px solid rgba(0, 160, 228, 0.623);
     border-radius: 15px;
 }
+
+@media only screen and (min-width: 1100px) {
+    .main-torneo{
+        width: 70%;
+        margin: auto;
+    }
+}
+
+@media only screen and (min-width: 1360px) {
+    .main-torneo{
+        width: 50%;
+        margin: auto;
+    }
+}
