--- a/src/pages/inicio/home.css
+++ b/src/pages/inicio/home.css
@@ -24,10 +24,16 @@
 
 @media only screen and (min-width: 1281px) {
     .main-home{
-        width: 50%;
+        width: 60%;
     }
     .section-carruseles{
         width: 80%;
         margin: auto;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
+    .main-home{
+        width: 50%;
     }
 }
