--- a/src/pages/torneos/torneo.css
+++ b/src/pages/torneos/torneo.css
@@ -29,9 +29,15 @@
     }
 }
 
-@media only screen and (min-width: 1360px) {
+@media only screen and (min-width: 1281px) {
+    .main-torneo{
+        width: 60%;
+        margin: auto;
+    }
+}
+
+@media only screen and (min-width: 1500px) {
     .main-torneo{
         width: 50%;
-        margin: auto;
     }
 }
